fix(scroll): touch scroll on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,8 @@ body {
     flex-wrap: wrap;
     max-height: 100%;
     position: fixed;
-    overflow: auto;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 .master div {
